Fixed typos, basic css styling

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
 </head>
 
 <body>
+	<div class="todo-header">
+		<h1>Todo List</h1>
+	</div>
 	<div class="todo-list">
 		<div class="todo-task">
           <span class="todo-desc">Todo Element 1</span>
           <button class="todo-edit">Edit</button>
-          <button class="tododelete">Delete</button>
+          <button class="todo-delete">Delete</button>
 		</div>
 		<div class="todo-task">
           <span class="todo-desc">Todo Element 2</span>
           <button class="todo-edit">Edit</button>
-          <button class="tododelete">Delete</button>
+          <button class="todo-delete">Delete</button>
 		</div>
 			<div class="todo-task">
           <span class="todo-desc">Todo Element 3</span>
           <button class="todo-edit">Edit</button>
-          <button class="tododelete">Delete</button>
+          <button class="todo-delete">Delete</button>
 		</div>
 	</div>
 	
