--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
           <button class="todo-delete">Delete</button>
 		</div>
 	</div>
-	
+	<script src="js/to-do-list.js"></script>
 </body>
 </html>
