changed spans to input fields

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 	</div>
 	<div class="todo-list">
 		<div class="todo-task">
-          <span class="todo-desc">Todo Element 1</span>
+          <input type class="todo-desc" value="Todo Element 1">
           <button class="todo-edit">Edit</button>
           <button class="todo-delete">Delete</button>
 		</div>
 		<div class="todo-task">
-          <span class="todo-desc">Todo Element 2</span>
+          <input type class="todo-desc" value="Todo Element 2">
           <button class="todo-edit">Edit</button>
           <button class="todo-delete">Delete</button>
 		</div>
 			<div class="todo-task">
-          <span class="todo-desc">Todo Element 3</span>
+          <input type class="todo-desc" value="Todo Element 3">
           <button class="todo-edit">Edit</button>
           <button class="todo-delete">Delete</button>
 		</div>
