--- a/index.html
+++ b/index.html
@@ -7,26 +7,57 @@
 </head>
 
 <body>
-	<div class="todo-header">
-		<h1>Todo List</h1>
+
+<div class="todo-list-wrapper">
+	<div class="titles">
+		<h1>TO-DO-LIST</h1>
+		<h2>Enter text into the input field to add items to your list.</h2>
+		<h3>Click the item to mark it as complete.</h3>
+		<h3>Click the "icons to remove the item from your list."</h3>
+		</div>
+	
+
+	<!-- ##AddTodoInput### -->
+	<div class="input-flex-container">
+	<input type="text" class="todo-desc" value="" placeholder="Enter a todo:">
+	<img src="img/add.png" alt="">
+</div>
+
+
+	<!-- #Added Todos# -->
+	<div class="todos">
+		<input type="text" class="todo-desc todos-input" value="" placeholder="">
+		<img src="img/edit.png" alt="" width="55px" height="55px">
+		<img src="img/trash.png" alt="" width="65px" height="65px;">
+
 	</div>
-	<div class="todo-list">
+
+
+</div>
+
+</div>
+
+
+
+	<!-- <div class="todo-list">
 		<div class="todo-task">
           <input type class="todo-desc" value="Todo Element 1">
-          <button class="todo-edit">Edit</button>
-          <button class="todo-delete">Delete</button>
+					<button class="todo-edit"><img src="img/add.png" alt=""></button>
+
 		</div>
 		<div class="todo-task">
-          <input type class="todo-desc" value="Todo Element 2">
-          <button class="todo-edit">Edit</button>
-          <button class="todo-delete">Delete</button>
+          <input class="todo-desc" value="Todo Element 2">
+					<button class="todo-edit"><img src="img/add.png" alt=""></button>
+          <button class="todo-edit"><img src="img/edit.png" alt=""></button>
+          <button class="todo-delete"><img src="img/trash.png" alt=""></button>
 		</div>
 			<div class="todo-task">
           <input type class="todo-desc" value="Todo Element 3">
-          <button class="todo-edit">Edit</button>
-          <button class="todo-delete">Delete</button>
+					<button class="todo-edit"><img src="img/add.png" alt=""></button>
+          <button class="todo-edit"><img src="img/edit.png" alt=""></button>
+          <button class="todo-delete"><img src="img/trash.png" alt=""></button>
 		</div>
-	</div>
+	</div> -->
 	<script src="js/to-do-list.js"></script>
 </body>
 </html>
