--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 
 <div class="todo-list-wrapper">
-	<div class="titles">
+	
 		<h1>TO-DO-LIST</h1>
 		<h2>Enter text into the input field to add items to your list.</h2>
 		<h3>Click the item to mark it as complete.</h3>
 		<h3>Click the "icons to remove the item from your list."</h3>
 		</div>
-	
+	</div>
 
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
