Added elements for practice purposes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="todo-list-wrapper">
-	
+
 		<h1>TO-DO-LIST</h1>
 		<h2>Enter text into the input field to add items to your list.</h2>
 		<h3>Click the item to mark it as complete.</h3>
@@ -26,38 +26,33 @@
 
 	<!-- #Added Todos# -->
 	<div class="todos">
-		<input type="text" class="todo-desc todos-input" value="" placeholder="">
+		<input type="text" class="todo-desc todos-input" value="1" placeholder="">
+		<img src="img/edit.png" alt="" width="55px" height="55px">
+		<img src="img/trash.png" alt="" width="65px" height="65px;">
+
+	</div>
+	<div class="todos">
+		<input type="text" class="todo-desc todos-input" value="2" placeholder="">
+		<img src="img/edit.png" alt="" width="55px" height="55px">
+		<img src="img/trash.png" alt="" width="65px" height="65px;">
+
+	</div>
+	<div class="todos">
+		<input type="text" class="todo-desc todos-input" value="3" placeholder="">
 		<img src="img/edit.png" alt="" width="55px" height="55px">
 		<img src="img/trash.png" alt="" width="65px" height="65px;">
 
 	</div>
 
 
+
+
 </div>
 
 </div>
 
 
 
-	<!-- <div class="todo-list">
-		<div class="todo-task">
-          <input type class="todo-desc" value="Todo Element 1">
-					<button class="todo-edit"><img src="img/add.png" alt=""></button>
-
-		</div>
-		<div class="todo-task">
-          <input class="todo-desc" value="Todo Element 2">
-					<button class="todo-edit"><img src="img/add.png" alt=""></button>
-          <button class="todo-edit"><img src="img/edit.png" alt=""></button>
-          <button class="todo-delete"><img src="img/trash.png" alt=""></button>
-		</div>
-			<div class="todo-task">
-          <input type class="todo-desc" value="Todo Element 3">
-					<button class="todo-edit"><img src="img/add.png" alt=""></button>
-          <button class="todo-edit"><img src="img/edit.png" alt=""></button>
-          <button class="todo-delete"><img src="img/trash.png" alt=""></button>
-		</div>
-	</div> -->
 	<script src="js/to-do-list.js"></script>
 </body>
 </html>
