--- a/index.html
+++ b/index.html
@@ -19,29 +19,34 @@
 
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
-	<input type="text" class="todo-desc" value="" placeholder="Enter a todo:">
+	<input type="text" class="todo-desc" id="addTodoButton" value="" placeholder="Enter a todo:">
 	<img src="img/add.png" alt="">
 </div>
 
 
 	<!-- #Added Todos# -->
-	<div class="todos">
-		<input type="text" class="todo-desc todos-input" value="1" placeholder="">
-		<img src="img/edit.png" alt="" width="55px" height="55px">
-		<img src="img/trash.png" alt="" width="65px" height="65px;">
+	<div class="todos-tasks">
+		<div class="todos-task">
+			<input type="text" class="todo-desc todos-input todos-input-one" value="1" placeholder="">
+			<img src="img/edit.png" alt="" width="55px" height="55px">
+			<img src="img/trash.png" alt="" width="65px" height="65px;">
+		</div>
 
-	</div>
-	<div class="todos">
-		<input type="text" class="todo-desc todos-input" value="2" placeholder="">
-		<img src="img/edit.png" alt="" width="55px" height="55px">
-		<img src="img/trash.png" alt="" width="65px" height="65px;">
 
-	</div>
-	<div class="todos">
-		<input type="text" class="todo-desc todos-input" value="3" placeholder="">
-		<img src="img/edit.png" alt="" width="55px" height="55px">
-		<img src="img/trash.png" alt="" width="65px" height="65px;">
 
+		<div class="todos-task">
+				<input type="text" class="todo-desc todos-input todos-input-two" value="2" placeholder="">
+				<img src="img/edit.png" alt="" width="55px" height="55px">
+				<img src="img/trash.png" alt="" width="65px" height="65px;">
+
+		</div>
+
+
+		<div class="todos-task">
+			<input type="text" class="todo-desc todos-input todos-input-three" value="3" placeholder="">
+			<img src="img/edit.png" alt="" width="55px" height="55px">
+			<img src="img/trash.png" alt="" width="65px" height="65px;">
+		</div>
 	</div>
 
 
