Added classes to img

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
 	<div class="todos-tasks">
 		<div class="todos-task">
 			<input type="text" class="todo-desc todos-input todos-input-one" value="1" placeholder="">
-			<img src="img/edit.png" alt="" width="55px" height="55px">
-			<img src="img/trash.png" alt="" width="65px" height="65px;">
+			<img src="img/edit.png" alt="" class="edit-button" width="55px" height="55px">
+			<img src="img/trash.png" alt="" class="delete-button" width="65px" height="65px;">
 		</div>
 
 
 
 		<div class="todos-task">
 				<input type="text" class="todo-desc todos-input todos-input-two" value="2" placeholder="">
-				<img src="img/edit.png" alt="" width="55px" height="55px">
-				<img src="img/trash.png" alt="" width="65px" height="65px;">
+				<img src="img/edit.png" alt="" class="edit-button" width="55px" height="55px">
+				<img src="img/trash.png" alt="" class="delete-button" width="65px" height="65px;">
 
 		</div>
 
 
 		<div class="todos-task">
 			<input type="text" class="todo-desc todos-input todos-input-three" value="3" placeholder="">
-			<img src="img/edit.png" alt="" width="55px" height="55px">
-			<img src="img/trash.png" alt="" width="65px" height="65px;">
+			<img src="img/edit.png" alt="" class="edit-button" width="55px" height="55px">
+			<img src="img/trash.png" alt="" class="delete-button" width="65px" height="65px;">
 		</div>
 	</div>
 
