A bit more styles

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
 
 <div class="todo-list-wrapper">
-
+		<div class = "todo-list-titles">
 		<h1>TO-DO-LIST</h1>
 		<h2>Enter text into the input field to add items to your list.</h2>
 		<h3>Click the item to mark it as complete.</h3>
 		<h3>Click the "icons to remove the item from your list."</h3>
 		</div>
-	</div>
+
 
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
 	<input type="text" class="todo-desc" id="addTodoButton" value="" placeholder="Enter a todo:" >
-	<img src="img/add.png" alt="" width="55px" height="55px">
+	<img src="img/add.png" alt="" width="45px" height="45px">
 </div>
 
 
@@ -31,6 +31,7 @@
 			<img src="img/edit.svg" alt="" class="edit-button" width="55px" height="45px">
 			<img src="img/x.svg" alt="" class="delete-button" width="65px" height="45px;">
 		</div>
+		
 
 
 
