Added class for add button.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
 	<input type="text" class="todo-desc" id="addTodoButton" value="" placeholder="Enter a todo:" >
-	<img src="img/add.png" alt="" width="45px" height="45px">
+	<img class="add-button" src="img/add.png" alt="" width="45px" height="45px">
 </div>
 
 
