AddTodo, checkboxes, strikethrough, keyboardEvent

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
-	<input type="text" class="todo-desc" id="addTodoButton" value="" placeholder="Enter a todo:" >
-	<img class="add-button" src="img/add.png" alt="" width="45px" height="45px">
+	<input type="text" class="todo-desc" id="addTodo" value="" placeholder="Enter a todo:" >
+	<img class="add-button" src="img/add.png" alt="" width="45px" height="45px" id="addTodoButton">
 </div>
 
 
 	<!-- #Added Todos# -->
 	<div class="todos-tasks">
-		<div class="todos-task">
+		<!-- <div class="todos-task">
 			<input type="text" class="todo-desc todos-input todos-input-one" value="1" placeholder="">
 			<img src="img/edit.svg" alt="" class="edit-button" width="55px" height="45px">
 			<img src="img/x.svg" alt="" class="delete-button" width="65px" height="45px;">
 		</div>
-		
+
 
 
 
@@ -47,7 +47,7 @@
 			<input type="text" class="todo-desc todos-input todos-input-three" value="3" placeholder="">
 			<img src="img/edit.svg" alt="" class="edit-button" width="55px" height="45px">
 			<img src="img/x.svg" alt="" class="delete-button" width="65px" height="45px;">
-		</div>
+		</div> -->
 	</div>
 
 
