Add basic edit button functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<!-- ##AddTodoInput### -->
 	<div class="input-flex-container">
-	<input type="text" class="todo-desc" id="addTodo" value="" placeholder="Enter a todo:" >
+	<input type="text" class="todo-desc-add" id="addTodo" value="" placeholder="Enter a todo:" >
 	<img class="add-button" src="img/add.png" alt="" width="45px" height="45px" id="addTodoButton">
 </div>
 
