--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>TO-DO-LIST</h1>
 		<h2>Enter text into the input field to add items to your list.</h2>
 		<h3>Click the item to mark it as complete.</h3>
-		<h3>Click the "icons to remove the item from your list."</h3>
+		<h3>Click the icons to remove and edit the item(s) from your list.</h3>
 		</div>
 
 
